--- a/translist.html
+++ b/translist.html
@@ -16,6 +16,9 @@
                        
             <input type="file" />
 
+            <div id = "table_container">
+
+            </div>
             <table id="translist_tbl">
                 <colgroup>
                     <col>
@@ -57,7 +60,7 @@
         <footer class="vas_footer">
             <p class="vas_footertext"></p>
         </footer>
-        
+        <script src = 'vssfnc.js'></script>
         <script src="translist.js"></script>
     </body>
 </html>
