--- a/entity.html
+++ b/entity.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <header id = "vas_header">
+    <header id="vas_header">
         VAS
     </header>
 
@@ -25,10 +25,10 @@
             </div>
 
             <div id="vss_navbarfunction">
-                <div class = "vss_function" id="navbarbuttonget">Get</div>
-                <div class = "vss_function" id="navbarbuttonadd">Add</div>
-                <div class = "vss_function" id="navbarbuttonpdf">PDF</div>
-                <div class = "vss_function" id="navbarbuttonfull">Full List</div>
+                <div class="vss_function" id="navbarbuttonget">Get</div>
+                <div class="vss_function" id="navbarbuttonadd">Add</div>
+                <div class="vss_function" id="navbarbuttonpdf">PDF</div>
+                <div class="vss_function" id="navbarbuttonexcel">Excel</div>
             </div>
         </div>
 
@@ -41,20 +41,19 @@
             </div>
 
             <div id="vas_contentdetail">
-                <form id="formdetails" style = "width:100%; background-color:gray;">
+                <form id="formdetails" style="width:100%; background-color:gray;">
                 </form>
             </div>
 
+            <!-- function -->
             <div id="vas_contentfunction">
-
             </div>
-
 
         </div>
 
 
     </div>
-    <footer id = "vas_footer">
+    <footer id="vas_footer">
         Copyright @2019
     </footer>
     <!-- <script type = "module" src="setting.js"></script>
