--- a/translist.html
+++ b/translist.html
@@ -15,6 +15,7 @@
             <div id="translist_cat"></div>
                        
             <input type="file" />
+            <button id = "exportexcel">To Excel</button>
 
             <div id = "table_container">
 
