--- a/trans.html
+++ b/trans.html
@@ -15,12 +15,120 @@
                 <div id="transheadername">
                     Name and Address
                 </div>
+                <div id="transheaderinfo">
+                        Info
+                    </div>
                 <div id="transheaderref">
                     Date and Reference
                 </div>
             </div>
-            <div id="transdetail">Trans Details</div>
-            <div id="transtotal">Trans Totals</div>
+            <div id="transdetail">
+                <table style="width:100%">
+                    <thead>
+                        <tr>
+                            <th>Date</th>
+                            <th>Name</th>
+                            <th>Amount</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                        <tr><td>01/01/2019</td><td>Perfect Item</td><td>RM1000</td></tr>
+                    </tbody>
+                    <tfoot>
+                        <tr><td></td><td></td><td>xx</td></tr>
+                    </tfoot>
+                </table>
+            </div>
+            <div id="transsummary">
+                <div id="transremark">
+                    Remark
+                </div>
+                <div id="transtax">
+                    Tax Summary
+                </div>
+                <div id="transtotal">
+                    Total
+                </div>
+            </div>
         </main>
         <footer>
             Document Footer
