--- a/infinipay.html
+++ b/infinipay.html
@@ -132,6 +132,8 @@
         Copyright@2019
     </footer>
 
+    <script src='vssfnc.js'></script>
+    <script src='infinipay_data.js'></script>
     <script src='infinipay.js'></script>
 </body>
 
