--- a/infinipay.html
+++ b/infinipay.html
@@ -55,7 +55,7 @@
                             stroke-dasharray="null" stroke-linecap="null" stroke-linejoin="null" stroke-width="50" />
                     </g>
                 </svg>
-                <div>Salary Structure</div>
+                <div>Salary Profile</div>
             </div>
             <div class="mainnavitem" id="navitemstatitem">
                 <svg viewBox="0 0 600 600" width="20" height="20" xmlns="http://www.w3.org/2000/svg"
@@ -80,6 +80,18 @@
                     </g>
                 </svg>
                 <div>Process</div>
+            </div>
+            <div class="mainnavitem" id="navitemcalcsheet">
+                <svg viewBox="0 0 600 600" width="20" height="20" xmlns="http://www.w3.org/2000/svg"
+                    xmlns:svg="http://www.w3.org/2000/svg">
+                    <g class="layer">
+                        <path
+                            d="m358.5,48.5c66,13 139,224 132,241c-7,17 -196,118 -243,102c-47,-16 -124,-163 -117,-202c7,-39 162,-154 228,-141z"
+                            fill="#ff0000" class="vsse_navitem" id="vsse_navitem5" stroke="#f9f4f4"
+                            stroke-dasharray="null" stroke-linecap="null" stroke-linejoin="null" stroke-width="50" />
+                    </g>
+                </svg>
+                <div>Calculation Sheet</div>
             </div>
             <div class="mainnavitem" id="navitemoutput">
                 <svg viewBox="0 0 600 600" width="20" height="20" xmlns="http://www.w3.org/2000/svg"
