--- a/infinipay.html
+++ b/infinipay.html
@@ -9,7 +9,7 @@
 
 <body>
     <header class="ipheader">
-        <div>InfiniPay - <i>endless possibilities</i></div>
+        <div>INFINI Pay - <i>endless possibilities</i></div>
     </header>
 
     <!-- ipmain is a column flex of: mainnav + maincontent -->
@@ -57,6 +57,18 @@
                 </svg>
                 <div>Salary Profile</div>
             </div>
+            <div class="mainnavitem" id="navitemaccrueditem">
+                <svg viewBox="0 0 600 600" width="20" height="20" xmlns="http://www.w3.org/2000/svg"
+                    xmlns:svg="http://www.w3.org/2000/svg">
+                    <g class="layer">
+                        <path
+                            d="m194.5,233.5c8,83 76,149 126,149c50,0 135,-66 134,-77c-1,-11 -105,-30 -111,-86c-6,-56 72,-104 72,-97c0,7 -83,-57 -130,-50c-47,7 -99,78 -91,161z"
+                            fill="#ff0000" class="vsse_navitem" id="vsse_navitem4" stroke="#f9f4f4"
+                            stroke-dasharray="null" stroke-linecap="null" stroke-linejoin="null" stroke-width="50" />
+                    </g>
+                </svg>
+                <div>Accrued Item</div>
+            </div>
             <div class="mainnavitem" id="navitemstatitem">
                 <svg viewBox="0 0 600 600" width="20" height="20" xmlns="http://www.w3.org/2000/svg"
                     xmlns:svg="http://www.w3.org/2000/svg">
@@ -69,7 +81,7 @@
                 </svg>
                 <div>Statutory Item</div>
             </div>
-            <div class="mainnavitem" id="navitemprocess">
+            <div class="mainnavitem" id="navitempayunit">
                 <svg viewBox="0 0 600 600" width="20" height="20" xmlns="http://www.w3.org/2000/svg"
                     xmlns:svg="http://www.w3.org/2000/svg">
                     <g class="layer">
@@ -79,7 +91,7 @@
                             stroke-dasharray="null" stroke-linecap="null" stroke-linejoin="null" stroke-width="50" />
                     </g>
                 </svg>
-                <div>Process</div>
+                <div>Work Unit</div>
             </div>
             <div class="mainnavitem" id="navitemcalcsheet">
                 <svg viewBox="0 0 600 600" width="20" height="20" xmlns="http://www.w3.org/2000/svg"
@@ -91,7 +103,19 @@
                             stroke-dasharray="null" stroke-linecap="null" stroke-linejoin="null" stroke-width="50" />
                     </g>
                 </svg>
-                <div>Calculation Sheet</div>
+                <div>Work Sheet</div>
+            </div>
+            <div class="mainnavitem" id="navitemprocess">
+                <svg viewBox="0 0 600 600" width="20" height="20" xmlns="http://www.w3.org/2000/svg"
+                    xmlns:svg="http://www.w3.org/2000/svg">
+                    <g class="layer">
+                        <path
+                            d="m358.5,48.5c66,13 139,224 132,241c-7,17 -196,118 -243,102c-47,-16 -124,-163 -117,-202c7,-39 162,-154 228,-141z"
+                            fill="#ff0000" class="vsse_navitem" id="vsse_navitem5" stroke="#f9f4f4"
+                            stroke-dasharray="null" stroke-linecap="null" stroke-linejoin="null" stroke-width="50" />
+                    </g>
+                </svg>
+                <div>Process</div>
             </div>
             <div class="mainnavitem" id="navitemoutput">
                 <svg viewBox="0 0 600 600" width="20" height="20" xmlns="http://www.w3.org/2000/svg"
@@ -125,7 +149,8 @@
                 <!-- contentdetail is a column flex of contentdetailtitle and (a holding logo or a flex-row div with nav and form) -->
                 <div id="contentdetail">
                     <div id="contentdetaillogo">
-                        <svg viewBox="0 0 600 600" width="500" height="500" xmlns="http://www.w3.org/2000/svg"
+                        <h2 id="logoinfinipay">INFINI PAY</h2>
+                        <!-- <svg viewBox="0 0 600 600" width="500" height="500" xmlns="http://www.w3.org/2000/svg"
                             xmlns:svg="http://www.w3.org/2000/svg">
                             <g class="layer">
                                 <path
@@ -133,7 +158,7 @@
                                     fill="#ff0000" id="contentdetaillogopath" stroke="#f9f4f4" stroke-dasharray="null"
                                     stroke-linecap="null" stroke-linejoin="null" stroke-width="5" />
                             </g>
-                        </svg>
+                        </svg> -->
 
                     </div>
                 </div>
