--- a/payroll.html
+++ b/payroll.html
@@ -948,6 +948,7 @@
   </g>
 </svg>
 
+<table id="payrateextract"></table>
 
    <p>There are 3 method to determine Pay Rate to be applied to Pay Quantity</p>
    <p>1. a value ($)</p>
