--- a/infinipay.html
+++ b/infinipay.html
@@ -13,7 +13,7 @@
     </header>
 
     <!-- ipmain is a column flex of: mainnav + maincontent -->
-    <main class="ipmain">
+    <div class="ipmain">
 
         <!-- mainnav is a row flex of mainnavitem: Employee + Pay Item + Statutory Item + Process -->
         <div id="mainnav">
@@ -134,7 +134,7 @@
         <!-- maincontent is a column flex of: contenttitle + contentbox -->
         <div id="maincontent">
 
-            <div id="contenttitle"></div>
+            <div id="contenttitle">- Payroll Object -</div>
 
             <!--  contentbox is a row flex of: contentlist + contentdetail  -->
             <div id="contentbox">
@@ -163,7 +163,7 @@
                     </div>
                 </div>
             </div>
-    </main>
+        </div>
 
     <footer class="ipfooter">
         Copyright@2019
