--- a/infinipay.html
+++ b/infinipay.html
@@ -134,7 +134,7 @@
         <!-- maincontent is a column flex of: contenttitle + contentbox -->
         <div id="maincontent">
 
-            <div id="contenttitle">- Payroll Object -</div>
+            <div id="contenttitle"></div>
 
             <!--  contentbox is a row flex of: contentlist + contentdetail  -->
             <div id="contentbox">
