--- a/payroll.html
+++ b/payroll.html
@@ -194,26 +194,30 @@
    <h2>Process Flow</h2>
    <img src='./payroll_process.svg'>
 
+   <h2>How Pay Quantity is extracted:</h2>
+   <img src='./payroll_quantity.svg'>
 
    <h2>How Pay Rate is extracted:</h2>
-   <img src='./payroll_rate.svg'>
+   <!-- <img src='./payroll_rate.svg'> -->
+   <img src='./payroll_rate2.svg'>
 
    <table id="payrateextract"></table>
 
-   <p>* PayItem Per is applied to the Processed PayAmount of Base (PayItem) (if none on PayItem Rate) OR Rate of Base (PayItem)</p>
-   <p>* RangeBase are based on Processed PayAmount (if none on PayItem Rate)<p>
-         <h2>* Leave Management</h2>
-         <h2>* Statutory Requirement (a calculation process the output Employer and Employee portion)</h2>
+   <h2>How Stat Rate is extracted:</h2>
+   <img src='./payroll_stat.svg'>
 
-         <h2>System Building</h2>
 
-         <table id="systembuild"></table>
+   <h2>* Leave Management</h2>
+   
+   <h2>System Building</h2>
 
-         <h2>Pay Item</h2>
-         <table id="payitem"></table>
+   <table id="systembuild"></table>
 
-         <script src="vssfnc.js"></script>
-         <script src="payroll.js"></script>
+   <h2>Pay Item</h2>
+   <table id="payitem"></table>
+
+   <script src="vssfnc.js"></script>
+   <script src="payroll.js"></script>
 </body>
 
 </html>
