--- a/infinipay.html
+++ b/infinipay.html
@@ -134,7 +134,8 @@
         <!-- maincontent is a column flex of: contenttitle + contentbox -->
         <div id="maincontent">
 
-            <div id="contenttitle"></div>
+            <div id="contenttitle">
+            </div>
 
             <!--  contentbox is a row flex of: contentlist + contentdetail  -->
             <div id="contentbox">
@@ -165,13 +166,15 @@
             </div>
         </div>
 
-    <footer class="ipfooter">
-        Copyright@2019
-    </footer>
-
+        <footer class="ipfooter">
+            Copyright@2019
+        </footer>
+    </div>
     <script src='vssfnc.js'></script>
-    <script src='infinipay_data.js'></script>
-    <script src='infinipay.js'></script>
+    <script src='infinipay_data.js' ></script>
+    <script src='infinipay.js' ></script>
+    <!-- <script src='infinipay_data.js' type='module'></script>
+    <script src='infinipay.js' type='module'></script> -->
 </body>
 
 </html>
