--- a/infinipay.html
+++ b/infinipay.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <!-- <link rel="stylesheet" type="text/css" href="~/css/infinipay.css"> -->
     <link rel="stylesheet" type="text/css" href="infinipay.css">
 </head>
 
@@ -173,6 +174,10 @@
     <script src='vssfnc.js'></script>
     <script src='infinipay_data.js' ></script>
     <script src='infinipay.js' ></script>
+    
+    <!-- <script src='~/js/vssfnc.js'></script> -->
+    <!-- <script src='~/js/vssfnc.js'></script> -->
+    
     <!-- <script src='infinipay_data.js' type='module'></script>
     <script src='infinipay.js' type='module'></script> -->
 </body>
