--- a/payroll.html
+++ b/payroll.html
@@ -185,6 +185,8 @@
 
    <table id="tasklist"></table>
 
+   <h2>Single Page Application</h2>
+   <img src='./payroll_spa.svg'>
 
    <a href="infinipay.html">
       <h2>->Main Menu Template (initial design)</h2>
