--- a/infinipay.html
+++ b/infinipay.html
@@ -168,7 +168,8 @@
         </div>
 
         <footer class="ipfooter">
-            Copyright@2019
+            <div>Data last fetched:</div>
+            <div>Copyright@2019</div>
         </footer>
     </div>
     <script src='vssfnc.js'></script>
