--- a/index.html
+++ b/index.html
@@ -725,7 +725,7 @@
                         <br>
                         <div class="vsse_bodywedidbox">
                             <div class="vsse_wedidprj">
-                                <a href="payroll.html"><img src="./img/banner_bg5.jpg" alt="infini PAY"  id="vsse_wedidpaylogo"></a> infini PAY
+                                <!-- <a href="payroll.html"><img src="./img/banner_bg5.jpg" alt="infini PAY"  id="vsse_wedidpaylogo"></a> infini PAY -->
                             </div>
                         </div>
 
