--- a/freshonline.html
+++ b/freshonline.html
@@ -8,15 +8,16 @@
 <!-- header consists of SiteTitle and NavBar -->
 <header>
     <div id="SiteTitle">
-        Fresh Online
+        <div style="float: left;">鲜赏疏果市场</div>
+        <div style="float:right;">Fresh Online</div>
     </div>
 
     <!-- NavBar is a row flex of MenuOrder, MenuDelivery, MenuOrderRecord -->
     <div id="NavBar">
         <div class="MenuItem" id="MenuProduct">Product</div>
         <div class="MenuItem" id="MenuOrder">Order List</div>
-        <div class="MenuItem" id="MenuOrderSummary">Order Summary</div>
-        <div class="MenuItem" id="MenuDelivery">Delivery</div>
+        <div class="MenuItem" id="MenuOrderSummary">Order Summary (Product)</div>
+        <div class="MenuItem" id="MenuDelivery">Order Summary (Pickup)</div>
         <div class="MenuItem" id="MenuUser">User</div>
         <div class="MenuItem" id="MenuResources">
             <div>Resources</div>
