--- a/vasweb.html
+++ b/vasweb.html
@@ -13,7 +13,7 @@
     </header>
     <main>
         <div id="menubar">
-            menu
+            
         </div>
         <div id="content">
             content
@@ -24,6 +24,7 @@
     </footer>
 </body>
 
+<script src="vssfnc.js"></script>
 <script src="vasweb.js"></script>
 
 </html>
