--- a/pt_index.html
+++ b/pt_index.html
@@ -7,12 +7,14 @@
 
 <body>
     <div id="maintitle">
-        <h1><span style="color:darkblue;">Project Documentation</span> - <span style="color:darkgreen;">The Combined Bus
+        <h1><span>Project Documentation</span> - <span>The Combined Bus
                 - Fleet Operation Management System</span></h1>
         <!-- <h2>- Project Documentation</h2> -->
     </div>
 
 
+    <!-- // page break // -->
+    <div style='page-break-after:always;'></div>
 
     <!-- pt_main is a row flex with pt_content and pt_body -->
     <div id="pt_main">
@@ -20,8 +22,11 @@
 
         <!-- CONTENT -->
         <div id="pt_content">
-            
+
             <h3>Content:</h3>
+
+
+            <button id="btnprintdoc">Print Doc</button>
 
             <div id="contentloadbuttondiv">
                 <div>Upload Content:</div>
@@ -33,16 +38,22 @@
             <div class="contentmain"><a href="#timeline_milestones"># Timeline and Milestones</a></div>
             <div class="contentmain"><a href="#struct_server"># Server Conceptual Structure</a></div>
             <div class="contentmain"><a href="#struct_tms"># TMS Conceptual Structure</a></div>
+            <div class="contentmain"><a href="#struct_app"># Mobile App Conceptual Structure</a></div>
             <div class="contentmain"><a href="#process_flow"># Process Flows</a>
                 <div class="contentsub"><a href="#processflow_tms">Ticketing Machine System (TMS)</a></div>
                 <div class="contentsub"><a href="#processflow_mis">Management Information System (MIS)</a></div>
+                <div class="contentsub"><a href="#processflow_app">Mobile App (App)</a></div>
                 <div class="contentsub"><a href="#processflow_breakdown">Breakdown/Accident</a></div>
             </div>
             <div class="contentmain"><a href="#user_interfaces"># User Interfaces</a></div>
             <div class="contentmain"><a href="#apis"># APIs</a></div>
+            <div class="contentmain"><a href="#route_sched_trip"># Event Handling of TMS</a></div>
             <div class="contentmain"><a href="#route_sched_trip"># Route-Schedule-Trip-Duty Roster-Duty Code</a></div>
         </div>
 
+
+        <!-- // page break // -->
+        <div style='page-break-after:always;'></div>
 
         <!-- BODY -->
         <div id="pt_body">
@@ -103,6 +114,13 @@
                     </div>
                     <div id="table_processflow_mis"></div>
 
+
+                    <div class="subsection2">
+                        <h4 id="processflow_app">App</h4>
+                        <img src="processflow_app.svg">
+                    </div>
+                    <div id="table_processflow_app"></div>
+
                 </div>
 
             </div>
@@ -114,7 +132,7 @@
                 <div id="table_userinterface"></div>
             </div>
 
-            
+
 
             <!-- ROUTE-SCHEDULE-TRIP -->
             <div class="mainsection" id="route_sched_trip">
@@ -138,8 +156,20 @@
                     <div id="table_api_servermis"></div>
                 </div>
                 <div class="subsection1">
+                    <h3>Server -x- App</h3>
+                    <div id="table_api_serverapp"></div>
+                </div>
+                <div class="subsection1">
                     <h3>Server -x- GPS</h3>
                     <div id="table_api_servergps"></div>
+                </div>
+                <div class="subsection1">
+                    <h3>TMS -x- GPS</h3>
+                    <div id="table_api_tmsgps"></div>
+                </div>
+                <div class="subsection1">
+                    <h3>APP -x- GPS</h3>
+                    <div id="table_api_appgps"></div>
                 </div>
             </div>
 
