--- a/pt_index.html
+++ b/pt_index.html
@@ -34,7 +34,7 @@
                 <input id="iptloadcontent" type="file" value="Load Content File">
             </div>
 
-            <div class="contentmain"><a href="#system_components"># System Components</a></div>
+            <div class="contentmain"><a href="#system_components"># System Overview</a></div>
             <div class="contentmain"><a href="#timeline_milestones"># Timeline and Milestones</a></div>
             <div class="contentmain"><a href="#struct_server"># Server Conceptual Structure</a></div>
             <div class="contentmain"><a href="#struct_tms"># TMS Conceptual Structure</a></div>
@@ -48,6 +48,7 @@
             <div class="contentmain"><a href="#user_interfaces"># User Interfaces</a></div>
             <div class="contentmain"><a href="#apis"># APIs</a></div>
             <div class="contentmain"><a href="#route_sched_trip"># Event Handling of TMS</a></div>
+            <div class="contentmain"><a href="#route_sched_trip"># Event Handling of App</a></div>
             <div class="contentmain"><a href="#route_sched_trip"># Route-Schedule-Trip-Duty Roster-Duty Code</a></div>
         </div>
 
@@ -61,7 +62,7 @@
 
             <!-- SYSTEM COMPONENTS -->
             <div class="mainsection" id="system_components">
-                <h2>System Components</h2>
+                <h2>System Overview</h2>
                 <div>
                     <img src="project scopes.svg">
                 </div>
