--- a/pt_index.html
+++ b/pt_index.html
@@ -50,6 +50,8 @@
             <div class="contentmain"><a href="#route_sched_trip"># Event Handling of TMS</a></div>
             <div class="contentmain"><a href="#route_sched_trip"># Event Handling of App</a></div>
             <div class="contentmain"><a href="#route_sched_trip"># Route-Schedule-Trip-Duty Roster-Duty Code</a></div>
+            <div class="contentmain"><a href="#object_statuscodes"># Status Codes</a></div>
+            <div class="contentmain"><a href="#issue_tobe_finalised"># System Design Issues to be Finalised</a></div>
         </div>
 
 
@@ -145,6 +147,16 @@
             </div>
 
 
+            <!-- STATUS -->
+            <div class="mainsection" id="object_statuscodes">
+                <h2>Sataus Code</h2>
+                <div class="subsection1">
+                    <h3></h3>
+                </div>
+                <div id="table_objectstatus"></div>
+            </div>
+
+
             <!-- APIs -->
             <div class="mainsection" id="apis">
                 <h2>List of APIs</h2>
@@ -163,6 +175,10 @@
                 <div class="subsection1">
                     <h3>Server -x- GPS</h3>
                     <div id="table_api_servergps"></div>
+                </div>
+                <div class="subsection1">
+                    <h3>TMS -x- Hardwares</h3>
+                    <div id="table_api_tmshwr"></div>
                 </div>
                 <div class="subsection1">
                     <h3>TMS -x- GPS</h3>
@@ -185,6 +201,14 @@
                 <div id="table_useraccess"></div>
             </div>
 
+            <!-- ISSUES TO BE FINALISED -->
+            <div class="mainsection" id="issue_tobe_finalised">
+                <h2>System Issues to be Finalised</h2>
+                <div class="subsection1">
+                    <h3></h3>
+                </div>
+                <div id="table_finaliseissue"></div>
+            </div>
 
         </div>
 
